@@ -38,7 +38,7 @@ void Signature::sign(WeakSignature &signature, const CryptoPP::RSA::PublicKey &p
 	CryptoPP::RandomNumberGenerator rng;
 	MD5 checksum = this->checksum();
 	signature.reset(new byte[size]);
-	encryptor.Encrypt(rng, &checksum, sizeof(checksum), (unsigned char*)signature.get());
+	encryptor.Encrypt(rng, (unsigned char*)&checksum, sizeof(checksum), (unsigned char*)signature.get());
 	/// TODO set before parameters (512 bit RSA key) or provide key pair generation functionality in algorithm.hpp?
 }
 
@@ -47,11 +47,11 @@ std::streamsize Signature::sign(const CryptoPP::RSA::PublicKey &publicKey)
 	WeakSignature signature;
 	this->sign(signature, publicKey);
 	const std::size_t dataSize = size + 2 * sizeof(int32);
-	boost::scoped_array data(new byte[dataSize]);
+	boost::scoped_array<byte> data(new byte[dataSize]);
 	memset(data.get(), 0, 8); // set first two int32 values to 0
-	memcpy(data + 8, signature.get(), size);
+	memcpy(&data[8], signature.get(), size);
 	signature.reset(); // free already copied signature
-	iarraystream istream(data, dataSize);
+	iarraystream istream(data.get(), dataSize);
 
 	return this->readData(istream);
 }
@@ -72,7 +72,7 @@ MD5 Signature::storedChecksum(const CryptoPP::RSA::PrivateKey &privateKey) const
 	CryptoPP::RSAES_OAEP_SHA_Decryptor decryptor(privateKey);
 	CryptoPP::RandomNumberGenerator rng;
 	MD5 result;
-	decryptor.Decrypt(rng, (unsigned char*)&buffer[8], bufferSize - 8, &result); // [8] because we skip the first two 0 int32 values
+	decryptor.Decrypt(rng, (unsigned char*)&buffer[8], bufferSize - 8, (unsigned char*)&result); // [8] because we skip the first two 0 int32 values
 
 	return result;
 }
